tests/duarouter/alternatives/style2_input/errors/vehicle/vehicle_id_missing/errors.duarouter
Error: Attribute 'id' is missing in definition of a vehicle.
Quitting (on error).
